chore(trace-viewer): fix actions header alignment (#37889)

--- a/packages/trace-viewer/src/ui/workbench.css
+++ b/packages/trace-viewer/src/ui/workbench.css
@@ -16,7 +16,7 @@
 
 .workbench-run-status {
   height: 30px;
-  padding: 4px;
+  padding: 4px 4px 4px 5px;
   flex: none;
   display: flex;
   flex-direction: row;
